# claudemcp

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
src/weather/: server.py
