[project]
name = "claudemcp"
version = "0.1.0"
description = "Weather service for Claude MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.1",
]
[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather"]

[project.scripts]
weather = "weather:main"
